# simple-timer

./: CMakeLists.txt
example/: timer_example.cpp
include/: simple_timer.h
src/: simple_timer.cpp
